# PACS_Andena_Bottacini

./: .gitignore  README  README.md
Codici/: #problem_naca.cc#  CMakeCache.txt  CMakeLists.txt  StationaryNavierStokes.cc  Validation_pn.cc  problem.cc  problem_naca.cc
Codici/Menessini_PN_Original/: CMakeLists.txt  Validation_pn.cc  compile_commands.json
Codici/STEP40/step40_6_DriftDiffusion/: CMakeLists.txt  Electrical_Constants.hpp  compile_commands.json  step-40.cc
Codici/Validation_pn/: CMakeLists.txt  Electrical_Constants.hpp  Electrical_Values.cpp  Electrical_Values.hpp  Electrical_Values_impl.hpp  Problem.cpp  Problem.hpp  Problem_impl.hpp  TODO.txt  Validation_pn.cc  compile_commands.json
Codici/Validation_pn_parallel/: CMakeLists.txt  Problem.hpp  Problem_impl.hpp  Problemi.txt  TODO.txt  Validation_pn.cc  compile_commands.json
Codici/Validation_pn_parallel2/: CMakeLists.txt  Electrical_Constants.hpp  Electrical_Values_impl.hpp  Problem.hpp  Problem_impl.hpp  Problemi.txt  Validation_pn.cc  compile_commands.json
Codici/build2/: CMakeCache.txt  Makefile  Meshes  Validation_pn  cmake_install.cmake  solution-000.vtk
Codici/build3/: CMakeCache.txt  Makefile  cmake_install.cmake
Mesh_AB/: Build_Geometry.cpp  Build_Geometry.hpp  Data.json  MyDataStruct.hpp  Point.cpp  README.txt  example.geo  example.msh  main  main.cpp
Mesh_AB_cut_tail/: Build_Geometry.cpp  Build_Geometry.hpp  Data.json  example.msh  main  main.cpp  makefile.mak
Mesh_AB_trapezio/: Build_Geometry.cpp  Build_Geometry.hpp  MyDataStruct.hpp  Point.hpp  README.txt  example.msh  main
Mesh_Menessini/: small_square.msh
Meshes/: BOXED_ELLIPSE.geo  BOXED_ELLIPSE.msh  BOXED_EMITTER.geo  REAL_EMITTER.geo  REAL_EMITTER.msh  small_square.msh
Meshes_Menessini/: BOXED_ELLIPSE.msh  REAL_EMITTER.msh
Paraviews/Naca2(inlet_cresce)/: navierstokes.pvd  navierstokes000000-0000.vtu  navierstokes000000-0001.vtu  navierstokes000000-0002.vtu  navierstokes000000-0003.vtu  navierstokes000005-0000.vtu  navierstokes000005-0001.vtu  navierstokes000005-0002.vtu  navierstokes000005-0003.vtu  navierstokes000010-0000.vtu  navierstokes000010-0001.vtu  navierstokes000010-0002.vtu  navierstokes000010-0003.vtu  navierstokes000015-0000.vtu  navierstokes000015-0001.vtu  navierstokes000015-0002.vtu  navierstokes000015-0003.vtu  navierstokes000020-0000.vtu  navierstokes000020-0001.vtu  navierstokes000020-0002.vtu  navierstokes000020-0003.vtu  navierstokes000025-0000.vtu  navierstokes000025-0001.vtu  navierstokes000025-0002.vtu  navierstokes000025-0003.vtu  navierstokes000030-0000.vtu  navierstokes000030-0001.vtu  navierstokes000030-0002.vtu  navierstokes000030-0003.vtu  navierstokes000035-0000.vtu  navierstokes000035-0001.vtu  navierstokes000035-0002.vtu  navierstokes000035-0003.vtu  navierstokes000040-0000.vtu  navierstokes000040-0001.vtu  navierstokes000040-0002.vtu  navierstokes000040-0003.vtu  navierstokes000045-0000.vtu  navierstokes000045-0001.vtu  navierstokes000045-0002.vtu  (+177 more)
Paraviews/Naca2(vel=0.5)/: Makefile  navierstokes.pvd  navierstokes000000-0000.vtu  navierstokes000000-0001.vtu  navierstokes000000-0002.vtu  navierstokes000000-0003.vtu  navierstokes000005-0000.vtu  navierstokes000005-0001.vtu  navierstokes000005-0002.vtu  navierstokes000005-0003.vtu  navierstokes000010-0000.vtu  navierstokes000010-0001.vtu  navierstokes000010-0002.vtu  navierstokes000010-0003.vtu  navierstokes000015-0000.vtu  navierstokes000015-0001.vtu  navierstokes000015-0002.vtu  navierstokes000015-0003.vtu  navierstokes000020-0000.vtu  navierstokes000020-0001.vtu  navierstokes000020-0002.vtu  navierstokes000020-0003.vtu  navierstokes000025-0000.vtu  navierstokes000025-0001.vtu  navierstokes000025-0002.vtu  navierstokes000025-0003.vtu  navierstokes000030-0000.vtu  navierstokes000030-0001.vtu  navierstokes000030-0002.vtu  navierstokes000030-0003.vtu  navierstokes000035-0000.vtu  navierstokes000035-0001.vtu  navierstokes000035-0002.vtu  navierstokes000035-0003.vtu  navierstokes000040-0000.vtu  navierstokes000040-0001.vtu  navierstokes000040-0002.vtu  navierstokes000040-0003.vtu  navierstokes000045-0000.vtu  navierstokes000045-0001.vtu  (+202 more)
Paraviews/Naca2(vel=1.5)/: navierstokes.pvd  navierstokes000000-0000.vtu  navierstokes000000-0001.vtu  navierstokes000000-0002.vtu  navierstokes000000-0003.vtu  navierstokes000005-0000.vtu  navierstokes000005-0001.vtu  navierstokes000005-0002.vtu  navierstokes000005-0003.vtu  navierstokes000010-0000.vtu  navierstokes000010-0001.vtu  navierstokes000010-0002.vtu  navierstokes000010-0003.vtu  navierstokes000015-0000.vtu  navierstokes000015-0001.vtu  navierstokes000015-0002.vtu  navierstokes000015-0003.vtu  navierstokes000020-0000.vtu  navierstokes000020-0001.vtu  navierstokes000020-0002.vtu  navierstokes000020-0003.vtu  navierstokes000025-0000.vtu  navierstokes000025-0001.vtu  navierstokes000025-0002.vtu  navierstokes000025-0003.vtu  navierstokes000030-0000.vtu  navierstokes000030-0001.vtu  navierstokes000030-0002.vtu  navierstokes000030-0003.vtu  navierstokes000035-0000.vtu  navierstokes000035-0001.vtu  navierstokes000035-0002.vtu  navierstokes000035-0003.vtu  navierstokes000040-0000.vtu  navierstokes000040-0001.vtu  navierstokes000040-0002.vtu  navierstokes000040-0003.vtu  navierstokes000045-0000.vtu  navierstokes000045-0001.vtu  navierstokes000045-0002.vtu  (+181 more)
Structured_Meshes/: Structured_Square.msh  Structured_step40.msh  Test1.msh  WireWire.msh  coarse_WW.msh  structured_naca_2.msh
TimeDependentNS/: BlockSchurPreconditioner.cpp  BlockSchurPreconditioner.hpp  BlockSchurPreconditioner_impl.hpp  BoundaryValues.hpp  CMakeLists.txt  InsIMEX.cpp  InsIMEX.hpp  InsIMEX_impl.hpp  Makefile  Time.hpp  compile_commands.json  example.msh  time_dependent_navier_stokes.cc
TimeDependentNS2/: BlockSchurPreconditioner_impl.hpp  BoundaryValues.hpp  InsIMEX.hpp  InsIMEX_impl.hpp  MyDataStruct.hpp  Readme.md  Time.hpp  compile_commands.json  time_dependent_navier_stokes.cc
(+978 files in other folders)
